Moved UoM helpers to module

--- a/Vish.MojitoCalculator/Vish.MojitoCalculator.fsproj
+++ b/Vish.MojitoCalculator/Vish.MojitoCalculator.fsproj
@@ -55,6 +55,7 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="UnitOfMeasureHelpers.fs" />
     <Compile Include="Measurements.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
