--- a/Vish.MojitoCalculator/Vish.MojitoCalculator.fsproj
+++ b/Vish.MojitoCalculator/Vish.MojitoCalculator.fsproj
@@ -57,6 +57,7 @@
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="UnitOfMeasureHelpers.fs" />
     <Compile Include="Measurements.fs" />
+    <Compile Include="Types.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
     <Content Include="packages.config" />
