Refactored ShoppingList, bug fix
Refactored ShoppingList to use one record field with the other values
computed. Did this for consistency. Fixed a bug with the soda shopping
list rounding.

--- a/Vish.MojitoCalculator/Vish.MojitoCalculator.fsproj
+++ b/Vish.MojitoCalculator/Vish.MojitoCalculator.fsproj
@@ -57,7 +57,8 @@
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="UnitOfMeasureHelpers.fs" />
     <Compile Include="Measurements.fs" />
-    <Compile Include="Types.fs" />
+    <Compile Include="MojitoRecipeCalculations.fs" />
+    <Compile Include="MojitoTypes.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
     <Content Include="packages.config" />
