Added super juice to recipe, redid calculations in liters, added total amount to recipe record

--- a/MojitoCalculator/MojitoCalculator.fsproj
+++ b/MojitoCalculator/MojitoCalculator.fsproj
@@ -11,10 +11,11 @@
         <Link>.dockerignore</Link>
       </Content>
       <Content Include="Dockerfile" />
-      <Compile Include="Measurements.fs" />
       <Compile Include="UnitOfMeasureHelpers.fs" />
+      <Compile Include="Measurements.fs" />
       <Compile Include="MojitoRecipeCalculations.fs" />
       <Compile Include="MojitoTypes.fs" />
+      <Compile Include="TextFormatters.fs" />
       <Compile Include="Program.fs" />
     </ItemGroup>
 
